--- a/APPVIEW/Views/Home/Details.cshtml
+++ b/APPVIEW/Views/Home/Details.cshtml
@@ -179,7 +179,8 @@
 			</ul>
 			<div class="tab-content" id="myTabContent">
 				<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
-					<img style="width:100%" src="~/images/chossesize.jpg" />
+					<img style="width:100%" src="~/UserImage/chonize.jpg" />
+					<img style="width:100%" src="~/UserImage/chonquan.webp" />
 				</div>
 
 				<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
